# wedi

./: .gitignore  .prettierrc  .windsurfrules  CHANGELOG.md  Dockerfile.api  README.md  package.json  turbo.json
apps/api/: .coverage  README.md  README_OPENAPI.md  alembic.ini  coverage.xml  package.json  pyproject.toml  pytest.ini  run.py  test.db
apps/api/.github/workflows/: test.yml
apps/api/alembic/: env.py
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/api/: __init__.py  dependencies.py  exceptions.py  schemas.py
apps/api/app/core/: __init__.py  config.py  examples.py  exceptions.py  logging.py  monitoring.py  openapi.py  security.py
apps/api/app/db/: __init__.py  session.py  types.py  unit_of_work.py
apps/api/app/events/: __init__.py  config.py  domain_events.py  event_publisher.py  publisher.py
apps/api/app/middleware/: __init__.py  auth.py  exception_handler.py  multi_tenancy.py  request_id.py
apps/api/app/models/: __init__.py  base.py  extensions.py  generated.py  organization.py  user.py
apps/api/app/repositories/: __init__.py  agent.py  base.py  base_with_specifications.py  customer.py  event_repository.py  event_user.py  integration_key.py  organization.py  payment_link.py  payment_order.py  price.py  product.py  user.py  wallet.py  wallet_circle.py
apps/api/app/routers/: auth.py  circle_wallet.py  organizations.py  payment_links.py  users.py
apps/api/app/schemas/: __init__.py  agent.py  auth.py  customer.py  integration_key.py  organization.py  payment_link.py  payment_order.py  (+3 more)
apps/api/docs/: EVENT_EMISSION.md  README_OPENAPI.md
apps/api/scripts/: test_event_emission.py
apps/api/tests/: README.md  conftest.py
(+71 files in other folders)
